--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "expo": "~38.0.8",
+    "expo-random": "^8.2.1",
     "expo-status-bar": "^1.0.2",
+    "prop-types": "^15.7.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
